Fix search bar in homepage now showing on smaller screens

--- a/src/subtitulamos/resources/assets/css/index.scss
+++ b/src/subtitulamos/resources/assets/css/index.scss
@@ -245,7 +245,6 @@
           width: calc(100% - 6px - 10px);
           margin-left: auto;
           margin-right: auto;
-          overflow: hidden;
 
           input {
             padding-left: 4px;
